# tp-lab-4

./: .travis.yml  CMakeLists.txt
include/: Automata.h
src/: AutomataOptions.cpp  main.cpp  tests.cpp
